--- a/_posts/2021-06-06-fun1.md
+++ b/_posts/2021-06-06-fun1.md
@@ -12,13 +12,13 @@ tag: Part 1
 2. Need to know what is hypervisor
 3. Below is the achitecture of Azure
 
-![Azure Architecture](/assets/azure_architecture.PNG)
+![Azure Architecture](/az900/assets/azure_architecture.PNG)
 
 4. The Azure portal is a web-based, unified console that provides an alternative to command-line tools. With the Azure portal, you can manage your Azure subscription by using a graphical user interface
 
 5. Azure offers more then 100 services.
 
-![Azure Services](/assets/services.PNG)
+![Azure Services](/az900/assets/services.PNG)
 
 6. Characteristics of these services
     1. Durable and highly available with redundancy and replication.
