--- a/_posts/2021-06-06-fun3.md
+++ b/_posts/2021-06-06-fun3.md
@@ -14,8 +14,8 @@ tag: Part 1
 
 3. SaaS: the cloud provider manages all aspects of the application environment, such as virtual machines, networking resources, data storage, and applications. The cloud tenant only needs to provide their data to the application managed by the cloud provider. For example, Microsoft Office 365 
 
-![Service Model](/assets/service_model.PNG)
-![Service Model Comparison](/assets/service_model_comparison.PNG)
+![Service Model](/az900/assets/service_model.PNG)
+![Service Model Comparison](/az900/assets/service_model_comparison.PNG)
 
 
 4.Having seen the top-down hierarchy of organization, let's describe each of those levels from the bottom up:
